2014-06-30  Per Bothner  <per@bothner.com>

	* NodeType.java (encodeType): New method.
	* XDataType.java (encodeType): New method.

2014-05-21  Per Bothner  <per@bothner.com>

	Change handling of text nodes to fix some corner cases.
	The rules rules for computed constructors and white-space is added
	in XQuery are complex, so just use an FString for literal content.
	* NodeConstructor.java (compileChild):  Use more general valueIfConstant
	rather than just QuoteExp's getValue.
	Don't call compileToNode if child is a MakeText
	Optimize case where argument is a quoted FString - from literal content.
	* MakeText.java (compileToNode): Replace body by throwing an exception.

	* KNode.java (make): Fix bug in ENTITY skipping.  Add optimization.

	* MakeWithBaseUri.java (apply): Remove bogus debug call.

2014-02-16  Per Bothner  <per@bothner.com>

	* XDataType.java: Use RealNum.isReal.
	* XIntegerType.java: Likewise.

	* HttpPrinter.java: Make sure Error is uncaught or re-thrown.
	* WriteTo.java: Likewise.
	* XDataType.java: Likewise.

2014-02-06  Per Bothner  <per@bothner.com>

	* Document.java (docMapLocation): Change from ThreadLocation
	to ThreadLocal.

2014-01-05  Per Bothner  <per@bothner.com>

	* Makefile.am: Merge into ../../../gnu/Makefile.am and remove.

2013-11-03  Per Bothner  <per@bothner.com>

	* Nodes.java: Update for new Values API.  An optimized
	representation for position references.
	(class NodeVector): Helper class for sequences of node references.
	* SortedNodes.java: Use new Nodes implementation.
	* SortNodes.java (apply1): Simplify by using canonicalize.

	* KNode.java: Add generic parameters on inherited SeqPosition.

2013-01-23  Per Bothner  <per@bothner.com>

	* MakeElement.java (startElement): Require qname argument to be Symbol.
	* MakeAttribute.java (startAttribute): Likewise.

2012-10-21  Per Bothner  <per@bothner.com>

	* NodeConstructor.java (stringIsText): New field.
	(setStringIsText): New setter.